# MTX

./: .gitignore  .gitmodules  Build-Debug.bat  Build-Release.bat  CMakeLists.txt  Shaders.cfg  main.cpp  output.spirv.asm  shadertoolsconfig.json
Include/: Interface.h  log.h  material.h  mtxCamera.h  mtxUtils.h  renderer.h  resource.h  resourcePool.h  sceneGraph.h  sceneLoader.h
MTXTest/: CMakeLists.txt  gTests.cpp  mtxTest.cpp
Shaders/: RayCommon.hlsli  RayTracingBox.rchit.hlsl  RayTracingBox.rgen.hlsl  RtUtils.hlsli  envSample.rmiss.hlsl  getShadState.hlsli  layout.hlsli  postProcess.fs.hlsl  postProcess.vs.hlsl  rayTracingBox.rmiss.hlsl
Src/: mtxUtils.cpp
Src/Core/: interface.cpp  material.cpp  mtxCamera.cpp  resource.cpp  resourcePool.cpp  sceneGraph.cpp
Src/Renderer/: renderer.cpp  sceneLoader.cpp
